--- a/APPLI/APPRAISAL/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/APPRAISAL/LISTS/HTML/RECORDS.HTML
@@ -43,10 +43,10 @@
     </td>
 -->
     <td>
-        <a class="btn btn-warning btn-sm btn-set-edit" id="APPRAISAL_EDIT_%2" >EDIT</a>
+        <a class="btn btn-warning btn-sm btn-appraisal-edit" id="APPRAISAL_EDIT_%2" >EDIT</a>
     </td>
     <td>
-        <a class="btn btn-danger btn-sm btn-set-delete" id="APPRAISAL_DELETE_%2" >DEL</a>
+        <a class="btn btn-danger btn-sm btn-appraisal-delete" id="APPRAISAL_DELETE_%2" >DEL</a>
     </td>
 </tr>
           
