--- a/APPLI/APPRAISAL/LISTS/HTML/TABLE.HTML
+++ b/APPLI/APPRAISAL/LISTS/HTML/TABLE.HTML
@@ -9,7 +9,7 @@
             <th>顧客名</th>
             <th>電話</th>
             <th>
-                <a class="btn btn-success btn-sm btn-set-new" id="SET_NEW">NEW</a>
+                <a class="btn btn-success btn-sm btn-appraisal-new" id="APPRAISAL_NEW">NEW</a>
             </th>
         </tr>
     </thead>
