--- a/APPLI/APPRAISAL/EDIT/HTML/PARTS/INPUT.HTML
+++ b/APPLI/APPRAISAL/EDIT/HTML/PARTS/INPUT.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <div class="container">
-     
+    
     <div class="fixed gray-trans-over z-index-3" style="padding:10px;">
 
         <!--Header Info-->
@@ -23,8 +23,8 @@
         <div class="btn-toolbar">
             <button class="btn btn-default col-smx-3" />Customer</button>
             <button class="btn btn-default col-smx-3" />Operation</button>
-            <button class="btn btn-default col-smx-3" />Parts</button>
-            <button class="btn btn-info col-smx-3 disabled" />Set</button>
+            <button class="btn btn-info col-smx-3 disabled" />Parts</button>
+            <button class="btn btn-default col-smx-3" />Set</button>
             <button class="btn btn-success col-smx-3" />Confirm</button>
         </div>
 
@@ -51,13 +51,7 @@
                 <form name="appraisal" action="" method="">
             		    <input type="hidden" id="TEMP_NO" name="TEMP_NO" value="###TEMP_NO###" />
                 </form>
-                <button type="submit" id="Set" class="btn btn-primary btn-lg ###DISABLED_SET###" />
-                    Set
-                </button>
-            	<button type="submit" id="Delete" class="btn btn-warning btn-lg ###DISABLED_DEL###" />
-                    Delete
-                </button>
-            </div>
+           </div>
         </div>
     </div>
 
@@ -74,21 +68,21 @@
           location.href = redirect;
         }
     });
-
+ 
     //HEADページ移動
     $(".btn-toolbar .btn").on('click', function() {
         var temp_no = $("#TEMP_NO").val();
         var func = $(this).html().toUpperCase();
         var frm = document.forms['appraisal'];
         frm.method = 'GET';
-        frm.action = '/APP/APPRAISAL/NEW/' + func + '/INPUT';
+        frm.action = '/APP/APPRAISAL/EDIT/' + func + '/INPUT' + '?temp_no=' + temp_no;
         frm.submit();
     });
 
     //カテゴリを選択
     $(document).on('click', 'a.category-list', function() {
 
-        //選択したセットのidから行を取得する
+        //選択した部品のidから行を取得する
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var row = $(this).parent().parent().attr("name");
@@ -97,16 +91,15 @@
 
         //該当のレコードに選択したカテゴリ名を設定
         $('#CATEGORY_NM_' + row).val(choice);
-        $('#CATEGORY_NM_HID' + row).val(choice);
+        $('#CATEGORY_NM_HID_' + row).val(choice);
 
         //該当のレコードに選択したカテゴリ番号を設定
-        var input_hidden = document.getElementById('CATEGORY_NO_HID_' + row);
-        input_hidden.value = cat_no;
+        $('#CATEGORY_NO_HID_' + row).val(cat_no);
 
-        //セットリストを選択したカテゴリで抽出
+        //パーツリストを選択したカテゴリで抽出
         var jqXHR = $.ajax({
             type: 'POST',
-            url: '/APP/SET_LIST/SEARCH/INPUT',
+            url: '/APP/PARTS_LIST/SEARCH/INPUT',
             data: {
                 CATEGORY_NO: cat_no,
                 ROW: row
@@ -114,21 +107,21 @@
         });
         jqXHR.done(function(data) {
             search_result = data;
-            $('#dropdown-set-' + row).addClass('open');
-            $('#dropdown-set-list-' + row).html(data);
-            //セットをクリア
-            $('#SET_NM_' + row).val('');
-            $('#SET_NO_HID_' + row).val('');
-            $('#SET_PRICE_' + row).val('');
-            $('#SET_QTY_' + row).val('0');
+            $('#dropdown-parts-' + row).addClass('open');
+            $('#dropdown-parts-list-' + row).html(data);
+            //パーツをクリア
+            $('#PARTS_NM_' + row).val('');
+            $('#PARTS_NO_HID_' + row).val('');
+            $('#PARTS_PRICE_' + row).val('');
+            $('#PARTS_QTY_' + row).val('0');
         });
         jqXHR.fail(function() {
-            search_result = '一致するセットがありません。';
+            search_result = '一致するパーツがありません。';
         });
     });
 
-    //登録済のセットリストの取得
-    $(document).on('click', ':button.btn-set', function() {
+    //登録済のパーツリストの取得
+    $(document).on('click', ':button.btn-parts', function() {
         var row = $(this).attr("name");
         var cat_no = $('#CATEGORY_NO_HID_' + row).val();
         var deferred = ajax_func();
@@ -136,22 +129,22 @@
           //done!!
         });
 
-        //セットリストを選択したカテゴリで抽出
+        //パーツリストを選択したカテゴリで抽出
         function ajax_func() {
             var deferred = new $.Deferred();
             $.ajax({
                 type: 'POST',
-                url: '/APP/SET_LIST/SEARCH/INPUT',
+                url: '/APP/PARTS_LIST/SEARCH/INPUT',
                 data: {
                     CATEGORY_NO: cat_no,
                     ROW: row
                 }
             }).done(function(data) {
                 search_result = data;
-                $('#dropdown-set-' + row).addClass('open');
-                $('#dropdown-set-list-' + row).html(data);
+                $('#dropdown-parts-' + row).addClass('open');
+                $('#dropdown-parts-list-' + row).html(data);
             }).fail(function() {
-                search_result = '一致するセットがありません。';
+                search_result = '一致するパーツがありません。';
             }).always(function() {
                 deferred.resolve();
             });
@@ -160,59 +153,74 @@
     });
 
 
-    //セット選択
-    $(document).on('click', 'li.list-set', function() {
+    //パーツ選択
+    $(document).on('click', 'li.list-parts', function() {
 
-        //選択したリストのidから行を取得する:list-行-セット番号
+        //選択したリストのidから行を取得する:list-行-部品番号
         var idname = $(this).attr("id"); 
         var list_id = idname.split("-");
         var row = list_id[1];
-        var setNo = $(this).val();
-        var setNm = $(this).text();
-        var setPrice = $('#SET_PRICE_' + row + '_' + setNo).val();
-        $('#SET_NM_' + row).val(setNm);
-        $('#SET_PRICE_' + row).val(setPrice);
-        $('#SET_QTY_' + row).val('1');
-        $('#SET_NO_HID_' + row).val(setNo);
+        var partsNo = $(this).val();
+        var partsNm = $(this).text();
+        var partsPrice = $('#PARTS_PRICE_' + row + '_' + partsNo).val();
+        $('#PARTS_NM_' + row).val(partsNm);
+        $('#PARTS_PRICE_' + row).val(partsPrice);
+        $('#PARTS_QTY_' + row).val('1');
+        $('#PARTS_NO_HID_' + row).val(partsNo);
     });
 
-    //数量PLUS
+    //部品 数量PLUS
     $(document).on('click', ':button.btn-plus', function() {
+        var kind = $(this).attr("name");
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var row = list_id[2];
-        var qty = $('#SET_QTY_' + row).val();
-        $('#SET_QTY_' + row).val(parseInt(qty) + parseInt(1));
+        var qty = $('#' + kind + '_QTY_' + row).val();
+        if (!qty) return;
+        var subTTL = $('#' + kind + '_PRICE_' + row).val();
+        var each = parseInt(subTTL) / parseInt(qty);
+        $('#' + kind + '_QTY_' + row).val(parseInt(qty) + parseInt(1));
+        qty = $('#' + kind + '_QTY_' + row).val();
+        $('#' + kind + '_PRICE_' + row).val(parseInt(each) * parseInt(qty));
     });
 
-    //数量MINUS
+    //部品 数量MINUS
     $(document).on('click', ':button.btn-minus', function() {
+        var kind = $(this).attr("name");
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var row = list_id[2];
-        var qty = $('#SET_QTY_' + row).val();
-        if (parseInt(qty) > 0) {
-            $('#SET_QTY_' + row).val(parseInt(qty) - parseInt(1));
+        var qty = $('#' + kind + '_QTY_' + row).val();
+        if (!qty) return;
+        var subTTL = $('#' + kind + '_PRICE_' + row).val();
+        var each = parseInt(subTTL) / parseInt(qty);
+        if (parseInt(qty) > 1) {
+            $('#' + kind + '_QTY_' + row).val(parseInt(qty) - parseInt(1));
+            qty = $('#' + kind + '_QTY_' + row).val();
         }
+        $('#' + kind + '_PRICE_' + row).val(parseInt(each) * parseInt(qty));
     });
 
-    //セット追加
-    $(document).on('click', 'a.btn-set', function() {
+
+    //パーツ追加
+    $(document).on('click', 'a.btn-parts', function() {
+
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var action = list_id[1];
         var row = list_id[2];
-        alert(action+ ":"+row);
+
         var temp_no = $('#TEMP_NO').val();
         var category_no = $('#CATEGORY_NO_HID_' + row).val();
         var category_nm = $('#CATEGORY_NM_' + row).val();
-        var set_no = $('#SET_NO_HID_' + row).val();
-        var set_nm = $('#SET_NM_' + row).val();
-        var set_price = $('#SET_PRICE_' + row).val();
-        var set_qty = $('#SET_QTY_' + row).val();
+        var parts_no = $('#PARTS_NO_HID_' + row).val();
+        var parts_nm = $('#PARTS_NM_' + row).val();
+        var parts_price = $('#PARTS_PRICE_' + row).val();
+        var parts_qty = $('#PARTS_QTY_' + row).val();
+
         var jqXHR = $.ajax({
             type: 'POST',
-            url: '/APP/APPRAISAL/NEW/SET/COMPLETE',
+            url: '/APP/APPRAISAL/EDIT/PARTS/COMPLETE',
             /*
             data: { 
               params,
@@ -225,15 +233,15 @@
               TEMP_NO: temp_no,
               CATEGORY_NO: category_no,
               CATEGORY_NM: category_nm,
-              SET_NO: set_no,
-              SET_NM: set_nm,
-              SET_PRICE: set_price,
-              SET_QTY: set_qty
+              PARTS_NO: parts_no,
+              PARTS_NM: parts_nm,
+              PARTS_PRICE: parts_price,
+              PARTS_QTY: parts_qty
             }
         });
         jqXHR.done(function(data) {
             if (data == 2222) {
-                alert("セットの追加が出来ませんでした。");
+                alert("パーツの追加が出来ませんでした。");
             } else {
                 $('intput[type="text"]').each(function() {
                 });
