APPRAISAL EDIT making...

--- a/APPLI/APPRAISAL/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/APPRAISAL/LISTS/HTML/RECORDS.HTML
@@ -13,17 +13,21 @@
 		<td>
         <h4><span id="info-msg" class="label label-lg ">%2</span></h4>
     </dt> 
-    <!--顧客番号-->
+    <!--査定番号-->
 		<td>
         <h4><span id="info-msg" class="label label-lg ">%3</span></h4>
     </dt> 
-		<!--顧客名-->
+    <!--顧客番号-->
 		<td>
         <h4><span id="info-msg" class="label label-lg ">%4</span></h4>
     </dt> 
-    <!--電話-->
+		<!--顧客名-->
 		<td>
         <h4><span id="info-msg" class="label label-lg ">%5</span></h4>
+    </dt> 
+    <!--電話-->
+		<td>
+        <h4><span id="info-msg" class="label label-lg ">%6</span></h4>
     </dt> 
 <!--
 		<td>
