--- a/APPLI/APPRAISAL/LISTS/HTML/SHOW.HTML
+++ b/APPLI/APPRAISAL/LISTS/HTML/SHOW.HTML
@@ -108,7 +108,7 @@
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var action = list_id[1];
-        var appraisal_no = list_id[2].replace(/ /g,"_"); 
+        var appraisal_no = list_id[2]; 
         var frm = document.forms['form_appraisal_list'];
 
         //パラメータを設定
