--- a/APPLI/APPRAISAL/LISTS/HTML/TABLE.HTML
+++ b/APPLI/APPRAISAL/LISTS/HTML/TABLE.HTML
@@ -5,6 +5,7 @@
         <tr>
             <th>#</th>
             <th>見積番号</th>
+            <th>査定番号</th>
             <th>顧客番号</th>
             <th>顧客名</th>
             <th>電話</th>
