--- a/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
@@ -20,7 +20,9 @@
         <br>
 
         <!--Contents-->
-        <form action="/APP/STUFF/NEW/COMPLETE" method="POST">
+        <form action="/APP/STUFF/NEW" method="POST">
+	        <input type="hidden" name="ACTION" value="COMPLETE" />
+	        <input type="hidden" name="REST" value="POST" />
 
             <!---->
 	        <div class="row">
@@ -76,19 +78,17 @@
             </div>
 	        <br />
 
-	        <input type="hidden" name="STATUS" value="CONFIRM" />
-
-            <div class="row">
-                <div class="col-md-1 hidden-xs">
-                </div>
-                <div class="col-md-10 col-xs-11">
-                    <div class="form-group">
-	                    <button type="submit" class="btn btn-primary btn-md" />
-	                        <span class="glyphicon glyphicon-plus">OK</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
+          <div class="row">
+              <div class="col-md-1 hidden-xs">
+              </div>
+              <div class="col-md-10 col-xs-11">
+                  <div class="form-group">
+	                  <button type="submit" class="btn btn-primary btn-md" />
+	                      <span class="glyphicon glyphicon-plus">OK</span>
+                      </button>
+                  </div>
+              </div>
+          </div>
 	    </form>
     </div>
 </div>
