--- a/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
+++ b/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
@@ -20,7 +20,10 @@
     <br>
 
     <!--Contents-->
-    <form action="/APP/STUFF/SIGNIN/AUTH" method="POST">
+    <form action="/APP/STUFF/SIGNIN" method="POST">
+        <input type="hidden" name="ACTION" value="AUTH" />
+        <input type="hidden" name="REST" value="PUT" />
+        <input type="hidden" name="RETURN_URL" value="###RETURN_URL###" />
         
         <!--ID(EMail)-->
         <div class="row">
@@ -60,8 +63,6 @@
             </div>
             <div class="col-md-10 col-xs-11">
                 <input type="submit" name="SUBMIT" value="AUTH" class="btn btn-primary btn-md" />
-                <input type="hidden" name="STATUS" value="SIGNIN" />
-                <input type="hidden" name="RETURN_URL" value="###RETURN_URL###" />
             </div>
         </div>
     </form>
